# erio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: model-publish.yml  publish.yml
crates/context-store/: Cargo.toml  README.md
crates/context-store/src/: config.rs  error.rs  lib.rs  store.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  error.rs  lib.rs  message.rs
crates/embedding/: Cargo.toml  README.md  build.rs  build_assets.rs
crates/embedding/src/: config.rs  engine.rs  error.rs  gemma.rs  in_memory.rs  lib.rs  model.rs  remote.rs  task.rs
crates/embedding/tests/: build_assets.rs
crates/event-bus/: Cargo.toml  README.md
crates/event-bus/src/: bus.rs  error.rs  event.rs  lib.rs  source.rs
crates/llm-client/: Cargo.toml  README.md
crates/llm-client/src/: error.rs  lib.rs  openai.rs  provider.rs  request.rs  response.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: lib.rs  registry.rs  result.rs  schema.rs  tool.rs
crates/workflow/: Cargo.toml  README.md
crates/workflow/src/: builder.rs  checkpoint.rs  conditional.rs  context.rs  dag.rs  engine.rs  error.rs  lib.rs  step.rs
examples/file-watcher-agent/: Cargo.toml
examples/file-watcher-agent/src/: lib.rs  main.rs
examples/multi-agent-chat/: Cargo.toml
examples/multi-agent-chat/src/: lib.rs  main.rs
examples/plan-execute-agent/: Cargo.toml
examples/plan-execute-agent/src/: lib.rs  main.rs
examples/rag-agent/: Cargo.toml
examples/rag-agent/src/: lib.rs  main.rs
examples/react-agent/: Cargo.toml
examples/react-agent/src/: lib.rs  main.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
test-utils/src/fixtures/: messages.rs  mod.rs
test-utils/tests/: workflow_integration.rs
