[workspace]
resolver = "2"
members = ["crates/*", "test-utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NomanworkGroup/erio"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Async traits
async-trait = "0.1"

# Streams
futures-core = "0.3"

# Logging (minimal in Phase 1)
tracing = "0.1"

# Test dependencies
mockall = "0.13"
wiremock = "0.6"
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

# Internal crates
core = { path = "crates/core", package = "erio-core" }
test-utils = { path = "test-utils", package = "erio-test-utils" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Required for thiserror display helper functions
ref_option = "allow"
trivially_copy_pass_by_ref = "allow"
