[package]
name = "erio-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Test utilities, mocks, and fixtures for Erio crates"

[dependencies]
core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
