[package]
name = "erio-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Test utilities, mocks, and fixtures for Erio crates"

[dependencies]
erio-core = { path = "../crates/core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
erio-workflow = { path = "../crates/workflow" }
erio-llm-client = { path = "../crates/llm-client" }
erio-tools = { path = "../crates/tools" }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
