[package]
name = "erio-context-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/erio-context-store"
description = "Context and vector storage for Erio"

[dependencies]
erio-core = { version = "0.1.0", path = "../core" }
erio-embedding = { version = "0.1.0", path = "../embedding" }

# Vector database
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
