[package]
name = "erio-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedding engine for Erio"

[dependencies]
erio-core = { path = "../core" }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
