[package]
name = "erio-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/erio-embedding"
description = "Embedding engine for Erio"

[dependencies]
erio-core = { version = "0.1.0", path = "../core" }
thiserror = { workspace = true }
async-trait = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = { workspace = true }

[build-dependencies]
ureq = { version = "2" }

[lints]
workspace = true
