[package]
name = "erio-event-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/erio-event-bus"
description = "Event system with pluggable sources for Erio"

[dependencies]
erio-core = { version = "0.1.0", path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
