[package]
name = "erio-llm-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider abstraction and adapters for Erio"

[dependencies]
erio-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
