[package]
name = "erio-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tool registry and execution for Erio"

[dependencies]
erio-core = { path = "../core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
