[package]
name = "erio-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/erio-tools"
description = "Tool registry and execution for Erio"

[dependencies]
erio-core = { version = "0.1.0", path = "../core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
