[package]
name = "erio-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DAG workflow engine for Erio"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
