[package]
name = "file-watcher-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Event-driven file summariser using Erio EventBus + LLM"

[dependencies]
erio-core = { path = "../../crates/core" }
erio-llm-client = { path = "../../crates/llm-client" }
erio-event-bus = { path = "../../crates/event-bus" }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
