[package]
name = "multi-agent-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multi-agent chat using Erio EventBus"

[dependencies]
erio-core = { path = "../../crates/core" }
erio-llm-client = { path = "../../crates/llm-client" }
erio-event-bus = { path = "../../crates/event-bus" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
