[package]
name = "rag-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Retrieval-augmented generation agent using Erio ContextStore + Embedding + LLM"

[dependencies]
erio-core = { path = "../../crates/core" }
erio-llm-client = { path = "../../crates/llm-client" }
erio-context-store = { path = "../../crates/context-store" }
erio-embedding = { path = "../../crates/embedding" }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
