[package]
name = "react-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "ReAct loop agent example using Erio SDK"

[dependencies]
erio-core = { path = "../../crates/core" }
erio-llm-client = { path = "../../crates/llm-client" }
erio-tools = { path = "../../crates/tools" }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
